# valschat

./: .gitignore  Cargo.toml  README.md  build-release.ps1
packaging/windows/client/: chat.bat  login.bat  logout.bat  register.bat  status.bat
packaging/windows/server/: start-server.bat
public/: app.js  index.html  styles.css
src/: app.rs  cli.rs  main.rs  model.rs  store.rs
src/crypto/: demo_cipher.rs  mod.rs  sha256.rs
