[package]
name = "messanger"
version = "0.1.0"
edition = "2024"
default-run = "messanger"

[dependencies]
axum = "0.8"
chrono = "0.4"
crossterm = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
